AcmeAir/KubernetesScripts/AcmeAir.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: acmeair
  labels:
    app: acmeair
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: acmeair
  replicas: 1 
  template:
    metadata:
      labels:
        app: acmeair
    spec:
      containers:
      - name: acmeair
        # liberty-acmeair:hotspot_11
        # liberty-acmeair:openj9_11_0310
        image: 192.168.122.160:32000/liberty-acmeair:java8_2022-01-20
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 9090
        resources:
          requests:
            memory: "450Mi"
            cpu: "500m"
          limits:
            memory: "450Mi"
            cpu: "1000m"
        readinessProbe:
          httpGet:
            path: /acmeair-webapp
            port: 9090
          initialDelaySeconds: 4 
          periodSeconds: 2
          failureThreshold: 5
---
apiVersion: v1
kind: Service
metadata:
  name: acmeair-mono-service
spec:
  ports:
    - port: 9090
  selector:
    app: acmeair
