AcmeAir/KubernetesScripts/Mongo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mongodb
  replicas: 1
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
      - name: mongo
        image: 192.168.122.160:32000/mongo-acmeair:latest
        imagePullPolicy: IfNotPresent
        args: ["--nojournal"]
        ports:
        - containerPort: 27017
        resources:
          requests:
            memory: "500Mi"
            cpu: "2000m"
          limits:
            memory: "500Mi"
            cpu: "2000m"

---
apiVersion: v1
kind: Service
metadata:
  # a client connect to this end-point
  name: mongodb
spec:
  # ClusterIP allows connections only from inside the cluster (default)
  type: ClusterIP
  # Service routes traffic only to pods with matching labels
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      # port used to connect to service
      port: 27017
      # Service routes traffic to this pod port
      targetPort: 27017
  sessionAffinity: ClientIP
