AcmeAir/KubernetesScripts/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/connection-proxy-header: "keep-alive"
    nginx.ingress.kubernetes.io/load-balance: "ewma"
    ingress.kubernetes.io/ssl-redirect: "false"
    ingress.kubernetes.io/connection-proxy-header: "keep-alive"
    ingress.kubernetes.io/load-balance: "ewma"
  name: acmeair-mono-ingress
spec:
  rules:
  - host:
    http:
      paths:
      - pathType: Prefix
        path: /acmeair-webapp
        backend:
          service: 
            name: acmeair-mono-service 
            port: 
              number: 9090
